# gmed-crm

./: .dockerignore  .editorconfig  .env.dev  .env.example  .gitattributes  .gitignore  Caddyfile  Cargo.toml  Dockerfile.backend  deny.toml  docker-compose.dev-hetzner.yml  docker-compose.ghcr.yml  docker-compose.hetzner.yml  docker-compose.override.yml  docker-compose.prod-hetzner.yml  docker-compose.release.yml  docker-compose.yml  index.html
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.sqlx/: query-011f487f8b72d5653e4e9bd613efb3a586075a4702c91290121ab37daf85b1fc.json  query-01ef14e48fed9051a47d57f0f1b8c53ab23ae97f3002d8e2da76488cfb0a8dbd.json  query-028643a09641593510f2f1736f1ed8e5bfce720dc19fec8b7a26323d8e69d3bf.json  query-02d4f985b63f73db83dc92b45161243c2fac825b7add980e5d47becbd6ac0e0c.json  query-02e256795843c7ed3b5d73eb62b954501ddc0592f218ded94a33c99f780d123e.json  query-0329bb063f211fab71ec2bd44bd662ca4adac0fd4d85bb7896482dcbe8c8fe72.json  query-042baa90b363a859c1657128f8594f649481722e6930d2033e9480cc1931b537.json  query-04e9b4d98ea1642b029697808e4c7220a15e9e89cb2242bc7332f544d9b6d883.json  query-070457ca15ae1d3c2f2e6a6ded055179b8c5237ab8802af91100b28fd230919f.json  query-07a516307afb1c5c21bed25aaeccddc7b578379849b97addbf8c3e869d512f81.json  query-07ceea3c772e51b58df79e7f7d07e802cc7280db8d659bb13246a78b263b5fd4.json  query-0961fea4137807c69d55d752fc9baa74eb6f059e5b342f2446f28f51a1602f77.json  query-0b40cc6f91ab9768fb9011e2e6123a8e52df0c9b027ec05a6710abf60e519fca.json  (+209 more)
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: app.rs  lib.rs  main.rs  session.rs
crates/frontend/src/api/: auth.rs  client.rs
crates/frontend/src/components/: announcement_banner.rs  chat_panel.rs  mod.rs  sidebar.rs  topbar.rs  workspace.rs
crates/frontend/src/i18n/: de.rs  mod.rs  ru.rs
crates/frontend/src/pages/: admin_access.rs  admin_activity.rs  admin_announcements.rs  admin_compliance.rs  admin_custom_fields.rs  admin_health.rs  admin_notifications.rs  admin_security.rs  admin_settings.rs  admin_users.rs  appointments_list.rs  cases_list.rs  chat.rs  contacts.rs  dashboard.rs  leads.rs  login.rs  mod.rs  orders.rs  patients.rs  providers.rs
crates/frontend/style/: main.css
crates/server/: Cargo.toml
crates/server/src/: access.rs  audit.rs  bmp.rs  business_metrics.rs  config.rs  crypto.rs  file_scan.rs  file_sniff.rs  lib.rs  main.rs  pdf_logo.rs  pdf_text.rs  rate_limit.rs  realtime.rs  security_headers.rs  settings.rs  state.rs  telemetry.rs
crates/server/src/auth/: blacklist.rs  jwt.rs  middleware.rs  mod.rs  password.rs  tokens.rs
crates/server/src/routes/: access_policies.rs  admin_compliance.rs  admin_security.rs  admin_settings.rs  announcements.rs  appointments.rs  auth.rs  cases.rs  concierge_services.rs  contracts.rs  custom_fields.rs  debt_management.rs  documents.rs  drug_products.rs  e2e_support.rs  feedback.rs  health.rs  interpreter_patient_history.rs  interpreters.rs  invoices.rs  key_rotation.rs  leads.rs  me.rs  messages.rs  mod.rs  notifications.rs  order_service_groups.rs  orders.rs  patient_document_requests.rs  patient_financials.rs  patient_next_actions.rs  patient_recommendations.rs  patients.rs  provider_people.rs  providers.rs  realtime.rs  service_packages.rs  sops.rs  stats.rs  tasks.rs  (+6 more)
crates/server/src/services/: drug_matching.rs  interpreter_suggestions.rs  mod.rs  order_service_groups.rs
crates/server/tests/: admin_compliance_api.rs  admin_mfa_api.rs  admin_security_api.rs  agent3_clinical_services.rs  appointment_care_path_api.rs  appointments_portal_api.rs  auth_sessions_api.rs  case_anamnesis_api.rs  clinical_redesign_api.rs  concierge_taxonomy_api.rs  contracts_quotes_api.rs  documents_api.rs  external_invoices_api.rs  feedback_api.rs  interpreters_api.rs  invoices_api.rs  leads_api.rs  me_api.rs  medication_expiry_api.rs  messages_api.rs  messages_portal_api.rs  patient_clinical_api.rs  patient_portal_agent2_api.rs  process_gates_api.rs  provider_catalog_api.rs  provider_people_api.rs  provider_taxonomy_api.rs  provider_templates_api.rs  sops_api.rs  stats_api.rs  users_api.rs  workflow_checklists_api.rs  workspace_filters_api.rs
crates/server/tests/support/: mod.rs
docs/: 00_source-of-truth_ua.md  README.md  admin-ui-fix-plan-ua.md  (+10 more)
(+1004 files in other folders)
