[package]
name = "gmed-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gmed-domain = { path = "../domain" }
