[package]
name = "gmed-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["json"] }
gloo-storage = "0.3"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "File", "FileList", "FormData", "Blob",
    "HtmlInputElement", "Headers", "RequestInit", "Request", "Response",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
gmed-shared = { path = "../shared" }
