[package]
name = "gmed-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "gmed_server"
path = "src/lib.rs"

[[bin]]
name = "gmed-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
http = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
rust_decimal = "1"
printpdf = { version = "0.9.1", default-features = false }

secrecy = { version = "0.10", features = ["serde"] }
gmed-domain = { path = "../domain" }
gmed-shared = { path = "../shared" }
gmed-db = { path = "../db" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
